data objects, board card